se crearon las variables de estilos para todo el proyecto, como también los estilos globales, y las utilidades necesarias para el proyecto

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>café</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&family=Montserrat:ital@1&family=Open+Sans&family=PT+Sans:wght@400;700&family=Poppins:wght@100;200&family=Roboto+Flex:opsz,wght@8..144,100&family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
