--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="header">
+        <div class="contenedor">
+            <div class="barra">
+                <a href="" class="logo" href="index.html"> 
+                    <h1 class="logo__nombre">
+                        Blog<span class="logo__bold">DeCafé</span>
+                    </h1>
+                </a>
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros </a>
+                    <a href="cursos.html" class="navegacion__enlace">Curso</a>
+                    <a href="contactos.html" class="navegacion__enlace">Contacto</a>
+
+                </nav>
+            </div>
+        </div>
+        <div class="header__texto">
+            <h2 class="no-margin">Blog de café con consejos y cursos</h2>
+            <p class="no-margin">
+                Aprende de los expertos con las mejores recetas y consejos
+            </p>
+
+        </div>
+    </div>
     
 </body>
 </html>
