--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <div class="contenedor">
             <div class="barra">
                 <a href="" class="logo" href="index.html"> 
@@ -34,7 +34,115 @@
             </p>
 
         </div>
+    </header>
+
+    <!-- Inicio de la clase contenedor que tendrá todo  el contenido principal de nuestro blog -->
+    <div class="contenedor contenedor-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+                <!-- Inicio de la clase Articulo 1 -->
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.jpg" alt="Imagen Blog">
+                </div>
+
+                <div class="entrada__contenido">
+                   <h4 class="no-margin">Tipos de Granos de Cáfe</h4> 
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo, libero necessitatibus provident velit neque quisquam vel dignissimos laborum adipisci ut architecto, consequatur nobis? Eius accusamus tempore soluta doloremque mollitia?</p>
+                   <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <!-- Fin de la clase Articulo -->
+
+               <!-- Inicio de la clase Articulo 2 -->
+               <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="Imagen Blog">
+                </div>
+
+                <div class="entrada__contenido">
+                   <h4 class="no-margin">3  Deliciosas Recetas de Café</h4> 
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo, libero necessitatibus provident velit neque quisquam vel dignissimos laborum adipisci ut architecto, consequatur nobis? Eius accusamus tempore soluta doloremque mollitia?</p>
+                   <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <!-- Fin de la clase Articulo -->
+
+               <!-- Inicio de la clase Articulo 3  -->
+               <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="Imagen Blog">
+                </div>
+
+                <div class="entrada__contenido">
+                   <h4 class="no-margin">Beneficios del Café</h4> 
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo, libero necessitatibus provident velit neque quisquam vel dignissimos laborum adipisci ut architecto, consequatur nobis? Eius accusamus tempore soluta doloremque mollitia?</p>
+                   <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <!-- Fin de la clase Articulo -->
+
+        </main> 
+
+        <aside class="sidebar">
+                <h3>Nuestros Cursos y talleres</h3>
+
+                <ul class="cursos no-padding"> 
+                    <li class="widget-cursos">
+                        <h4 class="no-margin">Técnicas de Extracción de Café</h4>
+                        <p class="widget-curso__label">Precio:
+                            <span class="widget-curso__info">Gratis</span>
+                        </p>
+                        <p class="widget-curso__label">Cupo:
+                            <span class="widget-curso__info">20</span>
+                        </p>
+                        <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+                    </li>
+
+                </ul>
+
+                <ul class="cursos no-padding">
+                    <li class="widget-cursos">
+                        <h4 class="no-margin">4 Recetas de café para Principiantes</h4>
+                        <p class="widget-curso__label">Precio:
+                            <span class="widget-curso__info">Gratis</span>
+                        </p>
+                        <p class="widget-curso__label">Cupo:
+                            <span class="widget-curso__info">20</span>
+                        </p>
+                        <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+                    </li>
+
+                </ul>
+        </aside>
+
     </div>
+
+    <!-- Fin del la clase del contenedor -->
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a href="" class="logo" href="index.html"> 
+                    <h1 class="logo__nombre">
+                        Blog<span class="logo__bold">DeCafé</span>
+                    </h1>
+                </a>
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros </a>
+                    <a href="cursos.html" class="navegacion__enlace">Curso</a>
+                    <a href="contactos.html" class="navegacion__enlace">Contacto</a>
+
+                </nav>
+            </div>
+        </div>
+            
+    </footer>
+
+
     
 </body>
 </html>
