--- a/contacto.html
+++ b/contacto.html
@@ -38,24 +38,29 @@
 
     <!-- Inicio de la clase contenedor que tendrá todo  el contenido principal de nuestro blog -->
     <main class="contenedor">
-        <h3 class="centrar-texto"> Sobre Nosotros</h3>
-        <div class="sobre-nosotros">
-            <div class="sobre-nosotros__imagen">
-                <img src="img/nosotros.jpg" alt="Imagen nosotros">
-            </div>
-            <div class="sobre-nosotros__texto">
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi voluptates ea corrupti tenetur possimus sunt blanditiis saepe, nostrum ratione tempore sapiente totam aliquam exercitationem odit omnis dicta numquam, laboriosam nulla?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quod nisi aperiam dolorum praesentium necessitatibus cupiditate ut culpa, dolorem unde odio! Distinctio molestiae praesentium iste ab illum nihil, quis fugiat.
-                </p>
-
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi voluptates ea corrupti tenetur possimus sunt blanditiis saepe, nostrum ratione tempore sapiente totam aliquam exercitationem odit omnis dicta numquam, laboriosam nulla?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quod nisi aperiam dolorum praesentium necessitatibus cupiditate ut culpa, dolorem unde odio! Distinctio molestiae praesentium iste ab illum nihil, quis fugiat.
-                </p>
-            </div>
-        </div>
+        <h3 class="centrar-texto">Contacto</h3>
         
+        <div class="contacto-bg"></div>
+        <form  class="formulario">
+            <div class="campo">
+                <label class="campo__label" for="nombre">Nombre</label>
+                <input class="campo__field" type="text" placeholder="Tu Nombre" id="nombre">
+            </div>
+
+            <div class="campo">
+                <label class="campo__label" for="email">E-mail</label>
+                <input class="campo__field" type="email" placeholder="Email" id="email">
+            </div>
+
+            <div class="campo">
+                <label class="campo__label" for="Mensaje">Mensaje</label>
+                <textarea class="campo__field campo__field--textarea id="Mensaje" ></textarea>
+            </div>
+
+            <div class="campo">
+                <input type="submit" value="Enviar" class="boton boton--primario">
+            </div>
+        </form>
     </main>
 
     <!-- Fin del la clase del contenedor -->
