--- a/cursos.html
+++ b/cursos.html
@@ -22,7 +22,7 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros </a>
                     <a href="cursos.html" class="navegacion__enlace">Curso</a>
-                    <a href="contactos.html" class="navegacion__enlace">Contacto</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
 
                 </nav>
             </div>
@@ -117,7 +117,7 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros </a>
                     <a href="cursos.html" class="navegacion__enlace">Curso</a>
-                    <a href="contactos.html" class="navegacion__enlace">Contacto</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
 
                 </nav>
             </div>
