--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>café</title>
+
+    <!-- Prefetch -->
+    <link rel="Prefetch" href="nosotros.html" as="DOCTYPE">
+    
+    <!-- Preload -->
+    <link rel="Preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
+
+    <link rel="Preload"  href="https://fonts.gstatic.com" rel="stylesheet" as="font">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&family=Montserrat:ital@1&family=Open+Sans&family=PT+Sans:wght@400;700&family=Poppins:wght@100;200&family=Roboto+Flex:opsz,wght@8..144,100&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&family=Montserrat:ital@1&family=Open+Sans&family=PT+Sans:wght@400;700&family=Poppins:wght@100;200&family=Roboto+Flex:opsz,wght@8..144,100&family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="Preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Trabajando el preload de imagenes para que cargen mas rapido -->
+    <link rel="preload" href="img/blog1.jpg" as="image">
+
 </head>
 <body>
     <header class="header">
@@ -22,7 +36,7 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros </a>
                     <a href="cursos.html" class="navegacion__enlace">Curso</a>
-                    <a href="contactos.html" class="navegacion__enlace">Contacto</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
 
                 </nav>
             </div>
@@ -43,7 +57,11 @@
                 <!-- Inicio de la clase Articulo 1 -->
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog1.jpg" alt="Imagen Blog">
+                    <picture >
+                        <source srcset="img/blog1.web" type="image/webp">
+                        <img loading="lazy" src="img/blog1.jpg" alt="Imagen Blog">
+                    </picture>
+                    
                 </div>
 
                 <div class="entrada__contenido">
@@ -58,7 +76,10 @@
                <!-- Inicio de la clase Articulo 2 -->
                <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog2.jpg" alt="Imagen Blog">
+                    <picture >
+                        <source srcset="img/blog2.web" type="image/webp">
+                        <img loading="lazy" src="img/blog2.jpg" alt="Imagen Blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -73,7 +94,10 @@
                <!-- Inicio de la clase Articulo 3  -->
                <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog3.jpg" alt="Imagen Blog">
+                    <picture >
+                        <source srcset="img/blog3.web" type="image/webp">
+                        <img loading="lazy" src="img/blog3.jpg" alt="Imagen Blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -134,7 +158,7 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros </a>
                     <a href="cursos.html" class="navegacion__enlace">Curso</a>
-                    <a href="contactos.html" class="navegacion__enlace">Contacto</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
 
                 </nav>
             </div>
