--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>café</title>
+    <meta name="description" content="Página web de Blog de Cáfe">
 
     <!-- Prefetch -->
     <link rel="Prefetch" href="nosotros.html" as="DOCTYPE">
@@ -137,7 +138,7 @@
                         <p class="widget-curso__label">Cupo:
                             <span class="widget-curso__info">20</span>
                         </p>
-                        <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+                        <a href="entrada.html" class="boton boton--secundario">Más Informaciónn  sobre nuestros Cursos</a>
                     </li>
 
                 </ul>
@@ -169,5 +170,5 @@
 
     
 </body>
-<script src="js/modernizer.js"></script>
+<script src="js/modernizer.js" ></script>
 </html>
